--- a/udemy/udemy/appsettings.json
+++ b/udemy/udemy/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "MySQLConnection": {
+    "MySQLConnectionString": "Server = localhost;DataBase=curso_udemy;Uid=root;Pwd=admin123"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
